# nonnewtonian

./: README.md  pyproject.toml
data/: collection.toml
data/textbooks/: knight-calc-3rd.toml  knight-college-2nd.toml  mandi-4th.toml
deploy/backup/: README.md  nnp-backup.env.example  nnp-backup.service  nnp-backup.sh  nnp-backup.timer  nnp-restore-test.sh
examples/: Emmy Noether.pptx  sample-deck.pptx
src/nonnewtonian/: __init__.py  cli.py  collections_repo.py  importer.py  parser.py  photos.py  placements.py  slides.py  textbook_toml.py  toc.py  tokens.py
src/nonnewtonian/web/: __init__.py  queries.py  views_admin.py  views_class.py  views_manage.py  views_public.py
src/nonnewtonian/web/static/: style.css
src/nonnewtonian/web/templates/: _macros.html  about.html  admin.html  base.html  class_page.html  deleted.html  embed.html  for_students.html  for_teachers.html  index.html  kit.txt  manage.html  new.html  privacy.html  submit.html  submit_thanks.html  textbook.html  wanted.html  welcome.html
tests/: conftest.py  test_collections.py  test_communal_share.py  test_copy_ascii.py  test_embed.py  test_importer.py  test_parser.py  test_photos.py  test_placements.py  test_slides.py  test_textbook_toml.py  test_toc.py  test_web.py
